smooth scroll :scroll:

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -1,6 +1,9 @@
 $green: #89B14D;
 $black: #252525;
 
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     background-image: url(../assets/vector-AUG-2020-55.jpg);
