--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -11,3 +11,26 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+.error {
+    visibility: hidden;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: $black;
+    transition: all 200ms;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    p {
+        font-size: 5rem;
+        padding: 50px;
+    }
+}
+
+@media (max-width: 900px) {
+    .error{
+    visibility: visible;
+    }
+}
