--- a/styles/style.css
+++ b/styles/style.css
@@ -266,6 +266,38 @@ body {
   background-attachment: fixed;
 }
 
+.error {
+  visibility: hidden;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: #252525;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.error p {
+  font-size: 5rem;
+  padding: 50px;
+}
+
+@media (max-width: 900px) {
+  .error {
+    visibility: visible;
+  }
+}
+
 body {
   color: whitesmoke;
   font-family: 'Noto Serif', serif;
